--- a/src/Styles/Main.module.css
+++ b/src/Styles/Main.module.css
@@ -6,10 +6,11 @@
   display: block;
   max-width: 100%;
   padding: 10px 25px;
-  height: 88vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-size: small;
 }
 
 .top_section {
@@ -18,15 +19,18 @@
   display: flex;
   justify-content: space-between;
   height: 300px;
+  align-items: center;
 }
 .top__left_section {
   /* border: 1px solid red; */
   width: 300px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   align-content: center;
+  /* border: 1px solid red; */
 }
 
 .top__left_section .top_head_left {
@@ -36,6 +40,7 @@
   align-content: center;
   margin-top: 40px;
   margin-bottom: auto;
+  /* border: 1px solid red; */
 }
 
 .top__left_section .top_head_left h2 {
@@ -53,6 +58,7 @@
   justify-content: space-around;
 
   margin-bottom: 20px;
+  /* border: 1px solid red; */
 }
 .top__left_section .top_head_bottom button {
   padding: 10px 25px;
