--- a/src/Styles/NavBar.module.css
+++ b/src/Styles/NavBar.module.css
@@ -14,6 +14,7 @@
   max-width: 100%;
   /* box-shadow: 0px 0px 4px 2px #333; */
   border-bottom: 1px solid gray;
+  font-size: smaller !important;
 }
 .Navbar_Container .Navbar_Container_Input {
   display: flex;
