--- a/src/Styles/Main.module.css
+++ b/src/Styles/Main.module.css
@@ -30,6 +30,7 @@
   align-items: center;
   justify-content: center;
   align-content: center;
+  text-align: center;
   /* border: 1px solid red; */
 }
 
